# FastBigFileProcessor

./: .gitignore  CMakeLists.txt  FastBigFileProcessor.pro  README.md  inputfilereader.cpp  inputfilereader.hpp  main.cpp  shortTestData.txt  task.cpp  task.hpp  testfilegenerator.cpp  testfilegenerator.hpp  threadpool.hpp  threadsafequeue.hpp
include/: inputfilereader.hpp  testfilegenerator.hpp  threadpool.hpp
sources/: inputfilereader.cpp  task.cpp  testfilegenerator.cpp
